
ElasticSearch-Carrot2 Change Log

================ ElasticSearch-Carrot2 1.2.0 [not released] ================

New features

* Added an action to return all available clustering algorithms.

Bug Fixes

Other

* Restructured the plugin documentation, added table of contents and 
  sections for each REST API method.

* Minor touches for incompatible ES API changes (removed methods in RestActions).

================ ElasticSearch-Carrot2 1.1.1 ================

Other

* Minor touches for incompatible ES API changes (removed methods in RestActions).

================ ElasticSearch-Carrot2 1.1.0 ================

New features

* The size of the clustering controller's component pool is adjustable using
  the configuration file (controller.pool-size option).  

* Added language field mapping descriptors. This helps with multi-lingual 
  clustering -- hints about each document's language can be stored together
  with the document in the index. See the documentation for examples.

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

Other

* Update base ES dependency to 0.90.2

* Verified threading (clustering runs on the search thread), added 
  simple stress testing.

* Added information about search threadpool use and potential tweaks to 
  its default size to examples.html

================ ElasticSearch-Carrot2 1.0.1 ================

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

================ ElasticSearch-Carrot2 1.0.0 ================

First open source release.